dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(brickRC, 0.1)
AM_CONFIG_HEADER(config.h)

dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_PATH_LIBGLADE(,,gnome)
AM_PATH_IMLIB


GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

AC_OUTPUT([
Makefile
macros/Makefile
src/Makefile
])

